--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     		<ul>
         		<li><a href="mailto:falguncontractor87@gmail.com">email</a></li>
         		<li><a href="https://github.com/falguncontractor">github.com/falguncontractor</a></li>
+			<li><a href="https://www.linkedin.com/in/falguncontractor/">linkedin</a></li>
 			</ul>
 		</footer>
 	</body>
